[tool.poetry]
name = "code-assistant"
version = "0.1.0"
description = ""
authors = ["Krzysztof Baranski <baranski5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^1.0.2"
langchain-openai = "^1.0.1"
langchain-anthropic = "^1.0.0"
langchain-chroma = "^1.0.0"
tiktoken = "^0.12.0"
gitpython = "^3.1.45"
langchain-community = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
